Modify script tags in index.html
Updated script references in index.html to include rules.js and change app.js version.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     &copy; 2026 Cordel 2.0 – Projeto IZA
   </footer>
 
-  <script src="app.js?v=6" defer></script>
+  <script src="rules.js?v=1" defer></script>
+  <script src="app.js?v=7" defer></script>
 </body>
 </html>
